--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.5.5"
   }
 }
