--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
     "dev:base": "webpack-dev-server --config webpack.dev.js",
-    "dev": "npm run dev:base -- --open"
+    "dev": "npm run dev:base"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +19,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -30,6 +34,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-standard": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
