--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-standard": "^5.0.0",
+    "git-commit-msg-linter": "^4.0.7",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "node-sass": "^7.0.1",
