--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.39",
