--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,19 @@
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
-    "rootDirs": ["src"],
+    "rootDirs": ["src", "tests"],
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@/tests/*": [
+        "../tests/*"
+      ]
     },
     "allowJs": true,
     "resolveJsonModule": true
   },
-  "include": ["src"]
+  "include": ["src", "tests"],
+  "exclude": [
+    "tests/e2e/cypress"
+  ]
 }
