--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "git-commit-msg-linter": "^4.0.7",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "node-sass": "^7.0.1",
